--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                         <a href="">Accessibility</a>
                      </div>
                      </div>
-                  <div class="footer-copy">© 2024 Spotify AB</div>
+                  <div class="footer-copy">© Spotify clone for learning</div>
                   <div class="sidebar-foot-lng mobile-foot-lng">
                      <button><img src="images/icons/language-icon.svg" alt="" /> English</button>
                   </div>
